<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@color/colorDialog">

    <TextView
        android:id="@+id/tv_add_player"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_player"
        android:textStyle="bold"
        android:background="@color/colorDialogInput"/>

    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_name"
        android:id="@+id/take_player_name"
        android:background="@color/colorDialogInput" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@color/colorDialogInput">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_type"
            android:ems="10"/>

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/player_type"
            android:popupBackground="@color/colorPrimary"/>

    </LinearLayout>
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/take_player_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorDialogInput"
        android:ems="10"
        android:hint="@string/hint_description"
        android:inputType="text" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDialogInput"
        android:layout_marginTop="5dp"
        android:id="@+id/dialogBtn_add_player"
        android:text="@string/create_new_player"
        />

</LinearLayout>
