<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorTextHint"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_players"
            android:textSize="40sp" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_add_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_player"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorTextHint"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginBottom="5dp"
        android:background="@color/colorTextHint"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="16dp"
        android:paddingTop="5dp"
        android:text="@string/all_players" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewPlayers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>