<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mn.xpro.tournamentmanagement.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="50sp"
        android:gravity="bottom">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_create_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_create_player"
            android:background="@color/colorTextHint"
            android:layout_marginBottom="5dp"
            android:onClick="onClick"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_create_tournament"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_create_tournament"
            android:background="@color/colorTextHint"
            android:layout_marginBottom="5dp"
            android:onClick="onClick"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_exit"
            android:background="@color/colorTextHint"
            android:layout_marginBottom="5dp"
            android:onClick="onClick"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
