<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDialogInput">
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="KING OF THE HILL"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linear_layout_king_match"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_border">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/player_1"
            android:layout_margin="10sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vs"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="40sp"
            android:layout_margin="10sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/player_2"
            android:textAlignment="viewEnd"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_player"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/next_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="25sp"
            android:textAlignment="center"
            android:background="@drawable/custom_border"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_exit"
            android:background="@color/colorPrimary"
            android:id="@+id/btn_exit"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tournament_end"
            android:text="Tournament end"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10sp"/>
    </LinearLayout>
</LinearLayout>